# cpp-collaborate-platform

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  docker-compose.yaml  git-conventional-commits.yaml  init.ps1  test.cpp  vcpkg.json
scripts/: fetch_odb.ps1  odb_generate.ps1
src/: main.cpp
src/modules/automation/adapters/: AutomationDomainService.hpp  AutomationLoader.cpp  AutomationLoader.hpp  AutomationModule.hpp  AutomationRouteHandler.cpp  AutomationRouteHandler.hpp  AutomationStaticService.hpp
src/modules/automation/adapters/dto/: AutomationDto.hpp
src/modules/automation/adapters/persistance/: AutomationDomainOdb-odb.cxx  AutomationDomainOdb-odb.hxx  AutomationDomainOdb-odb.ixx  AutomationDomainOdb.cpp  AutomationDomainOdb.hpp  AutomationDomainOdb.sql  AutomationDomainOdbInsert.sql  PgAutomationRepo.hpp
src/modules/automation/domain/: AutomationDomain.hpp
src/modules/automation/ports/: IAutomationDomainService.hpp  IAutomationRepo.hpp
src/modules/boardCategories/adapters/: BoardCategoryModule.hpp  BoardCategoryRouteHandler.cpp  BoardCategoryRouteHandler.hpp  BoardCategoryService.cpp  BoardCategoryService.hpp
src/modules/boardCategories/adapters/dto/: BoardCategoryDto.hpp
src/modules/boardCategories/adapters/persistance/: BoardCategoryOdb-odb.cxx  BoardCategoryOdb-odb.hxx  BoardCategoryOdb-odb.ixx  BoardCategoryOdb.cpp  BoardCategoryOdb.hpp  BoardCategoryOdb.sql  PgBoardCategoryRepo.hpp
src/modules/boardCategories/domain/: BoardCategory.hpp  BoardCategoryWrappers.hpp  IBoardCategoryUse.hpp
src/modules/boardCategories/ports/: IBoardCategoryRepo.hpp  IBoardCategoryService.hpp
src/modules/boards/adapters/: BoardModule.hpp  BoardRouteHandler.cpp  BoardRouteHandler.hpp  BoardService.cpp  BoardService.hpp
src/modules/boards/adapters/dto/: BoardDto.hpp
src/modules/boards/adapters/persistance/: BoardOdb-odb.cxx  BoardOdb-odb.hxx  BoardOdb-odb.ixx  BoardOdb.cpp  BoardOdb.hpp  BoardOdb.sql  PgBoardRepo.hpp
src/modules/boards/domain/: Board.hpp  BoardWrappers.hpp  IBoardUse.hpp
src/modules/boards/ports/: IBoardRepo.hpp  IBoardService.hpp
src/modules/groups/adapters/: GroupModule.hpp  GroupRouteHandler.cpp  GroupRouteHandler.hpp  GroupService.cpp  GroupService.hpp
src/modules/groups/adapters/dto/: GroupDto.hpp
src/modules/groups/adapters/persistance/: GroupOdb-odb.cxx  GroupOdb-odb.hxx  GroupOdb-odb.ixx  GroupOdb.cpp  GroupOdb.hpp  GroupOdb.sql  PgGroupRepo.hpp
src/modules/groups/domain/: Group.hpp
src/modules/groups/ports/: IGroupRepo.hpp  IGroupService.hpp
src/modules/spaces/adapters/: SpaceRouteHandler.cpp  SpaceRouteHandler.hpp  SpaceService.cpp  SpaceService.hpp
src/modules/spaces/adapters/dto/: SpaceDto.hpp
src/modules/spaces/adapters/persistence/: PgSpaceRepo.cpp  PgSpaceRepo.hpp  SpaceOdb-odb.cxx  SpaceOdb-odb.hxx  SpaceOdb-odb.ixx  SpaceOdb.cpp  SpaceOdb.hpp  SpaceOdb.sql
src/modules/spaces/domain/: Space.cpp  Space.hpp
src/modules/spaces/ports/: ISpaceRepo.hpp  ISpaceService.hpp
src/modules/tasks/adapters/: TaskModule.hpp  TaskRouteHandler.cpp  TaskRouteHandler.hpp  TaskService.cpp  TaskService.hpp
src/modules/tasks/adapters/dto/: TaskDto.hpp
src/modules/tasks/adapters/persistance/: PgTaskRepo.hpp  TaskOdb-odb.cxx  TaskOdb-odb.hxx  TaskOdb-odb.ixx  TaskOdb.cpp  TaskOdb.hpp  TaskOdb.sql
src/modules/tasks/domain/: ITaskUse.hpp  Task.hpp  TaskPriority.hpp  TaskWrappers.hpp
src/modules/tasks/ports/: ITaskRepo.hpp  ITaskService.hpp
src/modules/users/adapters/: UserRouteHandler.cpp  UserRouteHandler.hpp  UserService.cpp  UserService.hpp
src/modules/users/adapters/dto/: UserDto.hpp
src/modules/users/adapters/persistence/: PgUserRepo.cpp  PgUserRepo.hpp  UserOdb-odb.cxx  UserOdb-odb.hxx  UserOdb-odb.ixx  UserOdb.cpp  UserOdb.hpp  UserOdb.sql
src/modules/users/domain/: IUserUse.hpp  User.cpp  User.hpp  UserWrappers.hpp
src/modules/users/ports/: IUserRepo.hpp  IUserService.hpp
src/shared/adapters/: JwtAuthenticatorService.cpp  JwtAuthenticatorService.hpp  JwtGuard.cpp  JwtGuard.hpp  Logger.cpp  Logger.hpp  PasswordHasher.cpp  PasswordHasher.hpp  PermissionGuard.hpp  PermissionGuard.tpp  SpaceGuard.hpp  SpaceGuard.tpp
src/shared/adapters/automation_core/: AutomationEnums.hpp  AutomationParseUtils.hpp  AutomationRuntimeStructs.hpp  AutomationService.cpp  AutomationService.hpp  AutomationStructs.hpp
src/shared/adapters/http/request/: HttpRequestParams.hpp
src/shared/adapters/http/response/: HttpResponses.cpp  HttpResponses.hpp
src/shared/adapters/permission_core/: PermissionStruct.cpp  PermissionStruct.hpp  PermissionUtils.cpp  PermissionUtils.hpp  PermissionUtils.tpp
src/shared/adapters/persistence/: DatabaseManager.cpp  DatabaseManager.hpp  PgBaseRepo.hpp  PgBaseRepo.tpp
src/shared/adapters/persistence/odb/: BaseOdb-odb.cxx  BaseOdb-odb.hxx  BaseOdb-odb.ixx  BaseOdb.cpp  BaseOdb.hpp  BaseOdb.tpp
src/shared/domain/: AutomativeWrapper.hpp  AutomativeWrapper.tpp  BaseDomain.hpp  BaseDomainUse.hpp  BaseWrapper.hpp  SecureWrapper.hpp  SecureWrapper.tpp
src/shared/helpers/: EnvProvider.cpp  EnvProvider.hpp  TmStringUtils.hpp  entity_schema.hpp  env_keys.hpp
src/shared/helpers/json/: JsonDto.hpp  JsonDto.tpp  JsonFieldBuilder.hpp  JsonFieldBuilder.tpp  JsonTypeHelper.cpp  JsonTypeHelper.hpp  JsonTypeHelper.tpp
src/shared/ports/: AOdbMapper.hpp  AOdbMapper.tpp  IBaseRepo.hpp  IOdbMappable.hpp  IOdbMappableQuery.hpp
